# pretix-event-css-js

./: Makefile  README.md  pyproject.toml
src/pretix_event_css_js/: __init__.py  apps.py  forms.py  signals.py  urls.py  views.py
src/pretix_event_css_js/locale/: django.pot
src/pretix_event_css_js/locale/de/LC_MESSAGES/: django.mo  django.po
src/pretix_event_css_js/locale/de_Informal/LC_MESSAGES/: django.mo  django.po
src/pretix_event_css_js/templates/pretix_event_css_js/: control_settings.html
