[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pretix-event-css-js"
version = "1.0.0"
description = "Inject custom CSS and JavaScript into the presale pages of individual events."
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["pretix"]
authors = [
    {name = "Nico Knoll", email = "mail@nico.is"},
]
dependencies = [
    "pretix>=2.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pretix_event_css_js"]
core-metadata-version = "2.3"

[tool.hatch.build.targets.sdist]
core-metadata-version = "2.3"

[project.entry-points."pretix.plugin"]
pretix_event_css_js = "pretix_event_css_js:PretixPluginMeta"